Bug 498770 - Enable optimized Theora code in Windows builds - r=kinetik rs=roc